@@ -87,6 +87,8 @@ class OCI8
   SQLT_CLOB = 112
   # sql type (blob)
   SQLT_BLOB = 113
+  # sql type (bfile)
+  SQLT_BFILE = 114
   # sql type (result set)
   SQLT_RSET = 116
   # sql type (timestamp), not supported yet.
@@ -473,6 +475,19 @@ class OCI8
       end
     end
 
+    # get/set BFILE
+    BFILE = Object.new
+    class << BFILE
+      def fix_type(env, val, length, precision, scale)
+        [OCI8::SQLT_BFILE, nil, val.nil? ? env.alloc(OCIFileLocator) : val]
+      end
+      def decorate(b)
+        def b.get()
+          (val = super()) && OCI8::BFILE.new(@env, @svc, val.clone(@svc))
+        end
+      end
+    end
+
     # get Cursor
     Cursor = Object.new
     class << Cursor
@@ -796,15 +811,21 @@ class OCI8
       self
     end
 
-    def read(size = nil)
-      raise "uninitialized LOB" unless available?
-      rest = @locator.getLength(@svc) - @pos
+    def read(readlen = nil)
+      rest = self.size - @pos
       return nil if rest == 0 # eof.
-      if size.nil? or size > rest
-        size = rest # read until EOF.
+      if readlen.nil? or readlen > rest
+        readlen = rest # read until EOF.
       end
-      rv = @locator.read(@svc, @pos + 1, size)
-      @pos += size
+      begin
+        rv = @locator.read(@svc, @pos + 1, readlen)
+      rescue OCIError
+        raise if $!.code != 22289
+        # ORA-22289: cannot perform FILEREAD operation on an unopened file or LOB.
+        open
+        retry
+      end
+      @pos += readlen
       rv
     end
 
@@ -817,7 +838,15 @@ class OCI8
 
     def size
       raise "uninitialized LOB" unless available?
-      @locator.getLength(@svc)
+      begin
+        rv = @locator.getLength(@svc)
+      rescue OCIError
+        raise if $!.code != 22289
+        # ORA-22289: cannot perform FILEREAD operation on an unopened file or LOB.
+        open
+        retry
+      end
+      rv
     end
 
     def size=(len)
@@ -832,8 +861,7 @@ class OCI8
     end
 
     def eof?
-      raise "uninitialized LOB" unless available?
-      @pos == @locator.getLength(@svc)
+      @pos == size
     end
 
     def tell
@@ -841,8 +869,7 @@ class OCI8
     end
 
     def seek(pos, whence = IO::SEEK_SET)
-      raise "uninitialized LOB" unless available?
-      length = @locator.getLength(@svc)
+      length = size
       case whence
       when IO::SEEK_SET
         @pos = pos
@@ -873,6 +900,56 @@ class OCI8
   class CLOB < LOB
   end
 
+  class BFILE < LOB
+    attr_reader :dir_alias
+    attr_reader :filename
+    def initialize(env, svc, locator)
+      raise "invalid argument" unless env.is_a? OCIEnv
+      raise "invalid argument" unless svc.is_a? OCISvcCtx
+      raise "invalid argument" unless locator.is_a? OCIFileLocator
+      @env = env
+      @svc = svc
+      @locator = locator
+      @pos = 0
+      @dir_alias, @filename = @locator.name(@env)
+    end
+
+    def dir_alias=(val)
+      @locator.set_name(@env, val, @filename)
+      @dir_alias = val
+    end
+
+    def filename=(val)
+      @locator.set_name(@env, @dir_alias, val)
+      @filename = val
+    end
+
+    def truncate(len)
+      raise RuntimeError, "cannot modify a read-only BFILE object"
+    end
+    def write(data)
+      raise RuntimeError, "cannot modify a read-only BFILE object"
+    end
+    def size=(len)
+      raise RuntimeError, "cannot modify a read-only BFILE object"
+    end
+
+    def open
+      begin
+        @locator.open(@svc, :file_readonly)
+      rescue OCIError
+        raise if $!.code != 22290
+        # ORA-22290: operation would exceed the maximum number of opened files or LOBs.
+        @svc.close_all_files
+        @locator.open(@svc, :file_readonly)
+      end
+    end
+
+    def exists?
+      @locator.exists?(@svc)
+    end
+  end
+
   # bind or explicitly define
   BindType::Mapping[::String]       = BindType::String
   BindType::Mapping[::OCI8::RAW]    = BindType::RAW
@@ -883,6 +960,7 @@ class OCI8
   BindType::Mapping[::OCIRowid]     = BindType::OCIRowid
   BindType::Mapping[::OCI8::BLOB]   = BindType::BLOB
   BindType::Mapping[::OCI8::CLOB]   = BindType::CLOB
+  BindType::Mapping[::OCI8::BFILE]  = BindType::BFILE
   BindType::Mapping[::OCI8::Cursor] = BindType::Cursor
 
   # implicitly define
@@ -926,6 +1004,11 @@ class OCI8
   # -------------------------------------------------
   # BLOB          SQLT_BLOB  4000    0    0
   BindType::Mapping[OCI8::SQLT_BLOB] = BindType::BLOB
+
+  # datatype        type     size prec scale
+  # -------------------------------------------------
+  # BFILE         SQLT_BFILE  4000    0    0
+  BindType::Mapping[OCI8::SQLT_BFILE] = BindType::BFILE
 
   # datatype        type     size prec scale
   # -------------------------------------------------
